<resources>
    <string name="app_name" translatable="false">Homeledger</string>
    <string name="action_settings">Settings</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="msg_subscribed" translatable="false">Subscription successful</string>
    <string name="msg_subscribe_failed">Subscription failed</string>
    <string name="title_activity_group_main">group_main</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_summary">Summary</string>
    <string name="title_members">Members</string>
    <string name="owes">owes</string>
    <string name="pays">pays</string>
    <string name="dismiss">Dismiss</string>
    <string name="sort_by">Sort by</string>
    <string name="newest_to_oldest">Newest to oldest</string>
    <string name="oldest_to_newest">Oldest to newest</string>
    <string name="lowest_to_highest">Lowest to highest</string>
    <string name="highest_to_lowest">Highest to lowest</string>
    <string name="debts_first">Debts first</string>
    <string name="loans_first">Loans first</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_transaction">Delete transaction</string>
    <string name="atDate">at</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="undo">Undo</string>
    <string name="transaction_removed_from_the_list">Transaction removed from the list</string>
    <string name="add">Add</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="debtor">Debtor</string>
    <string name="lender">Lender</string>
    <string name="add_transaction">Add transaction</string>
    <string name="edit_transaction">Edit transaction</string>
    <string name="pays_all_debts_to">%s pays all debts to %s: %s?</string>
    <string name="debts_cancellation">Debts cancellation</string>
    <string name="there_are_no_transactions_yet">There are no transactions yet</string>
    <string name="there_are_no_members_yet">There are no members yet</string>
    <string name="create">Create</string>
    <string name="an_error_has_occurred">An error has occurred: </string>
    <string name="_already_exists">%s already exists</string>
    <string name="group">Group</string>
    <string name="group_name">Group name</string>
    <string name="create_group">Create group</string>
    <string name="_can_not_be_empty">%s can not be empty</string>
    <string name="group_id">Group id</string>
    <string name="join">Join</string>
    <string name="_does_not_exist">%s does not exist</string>
    <string name="group_name_id_can_not_be_empty">Group name and group id can not be both empty</string>
    <string name="invalid_">Invalid %s</string>
    <string name="leave_group_prompt">Do you want to leave the group %s?</string>
    <string name="delete_group_prompt">Are you sure you want to remove the group %s from every database? There is no way to undo this action.</string>
    <string name="choose_a_color_for_">Choose a color for %s</string>
    <string name="guest">Guest</string>
    <string name="appearance_in_groups">Appearance in groups:</string>
    <string name="join_a_group">Join a group</string>
    <string name="create_a_group">Create a group</string>
    <string name="add_one">Add one</string>
    <string name="member">Member</string>
    <string name="Not_set">Not set</string>
    <string name="modify">Modify</string>
    <string name="duplicate">Duplicate</string>
    <string name="register_payment">Register payment</string>
    <string name="delete">Delete</string>
    <string name="amount">Amount</string>
    <string name="delete_member_">Delete member %s?</string>
    <string name="no_colors_are_available">No colors are available</string>
    <string name="member_name_not_available">Member name is not available</string>
    <string name="maximum_amount_of_members_reached">Maximum amount of members reached</string>
    <string name="add_member">Add member</string>
    <string name="member_name">Member name</string>
    <string name="cancel_debts">Cancel debts</string>
    <string name="swipe_to_the_right">Swipe to the right</string>
    <string name="swipe_to_the_left">Swipe to the left</string>
    <string name="set_current_date_to_payments">Set current date to payments</string>
    <string name="log_out_or_delete_prompt">Are you sure you want to log out or delete your account (which can not be undone)?</string>
    <string name="log_out">Log out</string>
    <string name="delete_account">Delete account</string>
    <string name="movement">Movement</string>
    <string name="member__deleted">Member %s deleted</string>
    <string name="delete_member">Delete member</string>
    <string name="edit_member_color">Edit member color</string>
    <string name="history">History</string>
    <string name="please_wait">Please wait</string>
    <string name="fetching_data">Fetching data</string>
    <string name="dateFormat">MM/dd/yyyy</string>
    <string name="timeFormat">HH:mm</string>
    <string name="prefix">Prefix</string>
    <string name="share">Share</string>
    <string name="leave_group">Leave group</string>
    <string name="delete_group">Delete group</string>
    <string name="choose_month_and_year">Choose month and year</string>
    <string name="total_amount_paid">Total amount paid:</string>
    <string name="split_bill">Split bill</string>
    <string name="_each">%s each</string>
    <string name="has_to_pay_">has to pay %s</string>
    <string name="must_be_paid_">must be paid %s</string>
    <string name="title_ui">Display (UI)</string>
    <string name="done">Done</string>
    <string name="transaction_added">Transaction added</string>
    <string name="still_remain_">still remain %s</string>
    <string name="share_with">Share with</string>
    <string name="split_bill_transactions_divider">Transactions:</string>
    <string name="split_bill_members_divider">Amount paid per member involved:</string>
    <string name="remove">Remove</string>
    <string name="group_deleted_prompt">The group \'%s\' was deleted - Quitting</string>
    <string name="uploading__transactions">Uploading %d transactions</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
