<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_transactions">

    <fragment
        android:id="@+id/navigation_transactions"
        android:name="com.njair.homeledger.ui.transactions.TransactionsFragment"
        android:label="@string/title_transactions"
        tools:layout="@layout/fragment_transactions" />

    <fragment
        android:id="@+id/navigation_summary"
        android:name="com.njair.homeledger.ui.summary.SummaryFragment"
        android:label="@string/title_summary"
        tools:layout="@layout/fragment_summary" />

    <fragment
        android:id="@+id/navigation_members"
        android:name="com.njair.homeledger.ui.members.MembersFragment"
        android:label="@string/title_members"
        tools:layout="@layout/fragment_members" />
</navigation>