<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/title_transactions">
        <DropDownPreference
            android:entries="@array/transaction_actions"
            android:entryValues="@array/transaction_actions_values"
            android:key="pref_leftSwipe"
            android:title="@string/swipe_to_the_right"
            android:defaultValue="1"
            android:icon="@drawable/ic_duplicate_color_24dp"
            app:useSimpleSummaryProvider="true" />

        <!-- Right swipe means from the left and viceversa -->

        <DropDownPreference
            android:entries="@array/transaction_actions"
            android:entryValues="@array/transaction_actions_values"
            android:key="pref_rightSwipe"
            android:title="@string/swipe_to_the_left"
            android:defaultValue="3"
            android:icon="@drawable/ic_trash_color_24dp"
            app:useSimpleSummaryProvider="true" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_payment_curentDate"
            android:title="@string/set_current_date_to_payments" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_display_date_dividers"
            android:title="Display date dividers"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/title_ui">

        <SwitchPreference
            android:defaultValue="true"
            android:key="pref_nav_view_hide"
            android:title="Hide bottom bar automatically"
            android:summaryOn="Hides when a drawer is open (e.g. when the Add Transaction drawer is open)"
            android:summaryOff="Only hides on command"/>
    </PreferenceCategory>
</PreferenceScreen>
