<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout_pickers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:baselineAligned="false"
        android:focusable="true"
        android:clickable="true"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/buttonDatePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:background="?android:selectableItemBackground"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_de"
                android:textSize="16sp"
                android:text="@string/date"
                android:paddingStart="0dp"
                android:paddingEnd="4dp" />

            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="dd/MM/yyyy"
                android:paddingStart="0dp"
                android:paddingEnd="4dp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonTimePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:background="?android:selectableItemBackground"
            android:focusable="true"
            android:clickable="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black_de"
                android:textSize="16sp"
                android:text="@string/time"
                android:paddingStart="0dp"
                android:paddingEnd="4dp" />

            <TextView
                android:id="@+id/textViewTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="hh:mm"
                android:paddingStart="0dp"
                android:paddingEnd="4dp"
                tools:ignore="HardcodedText" />
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:maxLength="60"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="text"
        android:layout_gravity="center_vertical"
        tools:ignore="Autofill" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinnerDebtor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="8dp"
            android:paddingBottom="6dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_weight="4"
            android:entries="@array/choose_sender"
            android:layout_gravity="center_vertical"
            android:spinnerMode="dropdown"/>

        <com.njair.homeledger.ui.views.ToggleView
            android:id="@+id/toggleMovement"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:selectableItemBackground"
            android:layout_marginVertical="4dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_weight="5"
            custom:entry_first="@string/owes"
            custom:entry_second="@string/pays"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinnerLender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:paddingBottom="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="4dp"
            android:layout_weight="4"
            android:entries="@array/choose_recipient"
            android:layout_gravity="center_vertical"
            android:spinnerMode="dropdown"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="5">

            <TextView
                android:id="@+id/textViewCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black_de"
                android:textSize="16sp"
                android:paddingTop="4dp"
                android:text="$"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/editTextAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingStart="4dp"
                android:paddingEnd="8dp"
                android:ems="10"
                android:hint="@string/amount"
                android:layout_gravity="center_vertical"
                android:inputType="numberDecimal"
                tools:ignore="Autofill" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

    <!--android:background="@android:drawable/btn_dropdown"-->